--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,10 +9,9 @@ upstream api {
 server {
     listen 80;
     
-    # location /dr/ {
-        # alias http://api/auth/;
-        # proxy_pass http://api;
-    # }
+    location /auth {
+        proxy_pass http://api;
+    }
 
     location / {
         proxy_pass http://client;
