--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,16 @@ after_success:
     - docker push andymac007/lrh-client
     - docker push andymac007/lrh-server
     - docker push andymac007/lrh-nginx
+
+deploy:
+    edge: true
+    provider: elasticbeanstalk
+    region: ca-central-1
+    app: lrh-multidocker 
+    env: LrhMultidocker-env
+    bucket_name: elasticbeanstalk-ca-central-1-411221110011
+    bucket_path: docker-multi
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
